; ModuleID = '/home/carl/AnghaBench/freebsd/sys/kern/extr_sys_procdesc.c_procdesc_falloc.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/kern/extr_sys_procdesc.c_procdesc_falloc.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.thread = type { i32 }
%struct.file = type { i32 }
%struct.filecaps = type { i32 }

@PD_CLOEXEC = common dso_local global i32 0, align 4
@O_CLOEXEC = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @procdesc_falloc(%struct.thread* %0, %struct.file** %1, i32* %2, i32 %3, %struct.filecaps* %4) #0 {
  %6 = alloca %struct.thread*, align 8
  %7 = alloca %struct.file**, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca %struct.filecaps*, align 8
  %11 = alloca i32, align 4
  store %struct.thread* %0, %struct.thread** %6, align 8
  store %struct.file** %1, %struct.file*** %7, align 8
  store i32* %2, i32** %8, align 8
  store i32 %3, i32* %9, align 4
  store %struct.filecaps* %4, %struct.filecaps** %10, align 8
  store i32 0, i32* %11, align 4
  %12 = load i32, i32* %9, align 4
  %13 = load i32, i32* @PD_CLOEXEC, align 4
  %14 = and i32 %12, %13
  %15 = icmp ne i32 %14, 0
  br i1 %15, label %16, label %18

16:                                               ; preds = %5
  %17 = load i32, i32* @O_CLOEXEC, align 4
  store i32 %17, i32* %11, align 4
  br label %18

18:                                               ; preds = %16, %5
  %19 = load %struct.thread*, %struct.thread** %6, align 8
  %20 = load %struct.file**, %struct.file*** %7, align 8
  %21 = load i32*, i32** %8, align 8
  %22 = load i32, i32* %11, align 4
  %23 = load %struct.filecaps*, %struct.filecaps** %10, align 8
  %24 = call i32 @falloc_caps(%struct.thread* %19, %struct.file** %20, i32* %21, i32 %22, %struct.filecaps* %23)
  ret i32 %24
}

declare dso_local i32 @falloc_caps(%struct.thread*, %struct.file**, i32*, i32, %struct.filecaps*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
